--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ while (testV < 3) {
 if (!pass1) 
 history.go(-1);
 if (pass1.toLowerCase() == "bim088ucd") {
-window.open('Game');
+window.open('ResearchaCampusStory');
 break;
 } 
 testV+=1;
