--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ body, html {
 }
 
 .middle {
-    position: absolute;
+/*     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -70%);
+    transform: translate(-50%, -70%); */
     text-align: center;
 }
 
@@ -82,7 +82,7 @@ window.open('SpaceZoologist');
     <p>Coming Soon.. </p>
       <br>
     <b><p style="color:black; font-size:20px; bold;"> If you're a UC student currently enrolled in "BIM 088V: Introduction to Research and Self Assessment", <a href="javascript:passWord()">click here</a> to access the game.</p></b>
-    <b><p style="color:black; font-size:20px; bold;"> If you're playtesting SpaceZoologist, <a href="javascript:SpacepassWord()">click here</a> to access the game.</p></b>
+    <b><img src="SZTitle.png" alt="null" style="width:300px;"><p style="color:black; font-size:20px; bold;"> If you're playtesting SpaceZoologist, <a href="javascript:SpacepassWord()">click here</a> to access the game.</p></b>
   </div>
     
     
