--- a/SpaceZoologist/index.html
+++ b/SpaceZoologist/index.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/SpaceZoologist.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/2022_01_07.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
