--- a/ResearchaCampusStory/index.html
+++ b/ResearchaCampusStory/index.html
@@ -3,24 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Intro to Research: A Campus Story</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/UnityLoader.js"></script>  
-    <script> 
-      // loading screen
-        var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Game.json", {onProgress: UnityProgress});
-    </script>
+    <title>Unity WebGL Player | Game</title>
   </head>
-
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
-
     <script src="Build/Game.loader.js"></script>
-
-
-
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -38,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/game2022-c.data.unityweb",
-        frameworkUrl: "Build/game2022-c.framework.js.unityweb",
-        codeUrl: "Build/game2022-c.wasm.unityweb",
+        dataUrl: "Build/Game.data.unityweb",
+        frameworkUrl: "Build/Game.framework.js.unityweb",
+        codeUrl: "Build/Game.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "UC Davis",
         productName: "Game",
@@ -48,8 +35,6 @@
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
-
-
     </script>
   </body>
 </html>
