[GHA] Updated Space Zoologist build.

--- a/SpaceZoologist/index.html
+++ b/SpaceZoologist/index.html
@@ -62,9 +62,9 @@
         frameworkUrl: buildUrl + "/WebGL.framework.js",
         codeUrl: buildUrl + "/WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "LouieLab",
         productName: "Space-Zoologist",
-        productVersion: "0.0.2242",
+        productVersion: "0.0.2249",
         showBanner: unityShowBanner,
       };
 
