[GHA] Updated Space Zoologist build.

--- a/SpaceZoologist/index.html
+++ b/SpaceZoologist/index.html
@@ -56,15 +56,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/WebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build.data",
-        frameworkUrl: buildUrl + "/Build.framework.js",
-        codeUrl: buildUrl + "/Build.wasm",
+        dataUrl: buildUrl + "/WebGL.data",
+        frameworkUrl: buildUrl + "/WebGL.framework.js",
+        codeUrl: buildUrl + "/WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "LouieLab",
         productName: "Space-Zoologist",
-        productVersion: "1.0",
+        productVersion: "0.0.2260",
         showBanner: unityShowBanner,
       };
 
