--- a/ResearchaCampusStory/index.html
+++ b/ResearchaCampusStory/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ResearchaCampusStory.loader.js";
+      var loaderUrl = buildUrl + "/Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ResearchaCampusStory.data.unityweb",
-        frameworkUrl: buildUrl + "/ResearchaCampusStory.framework.js.unityweb",
-        codeUrl: buildUrl + "/ResearchaCampusStory.wasm.unityweb",
+        dataUrl: buildUrl + "/Build.data.unityweb",
+        frameworkUrl: buildUrl + "/Build.framework.js.unityweb",
+        codeUrl: buildUrl + "/Build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "UC Davis",
         productName: "Game",
